Increased number of iterations and burn-in

--- a/Extended model/testing the odin model.Rmd
+++ b/Extended model/testing the odin model.Rmd
@@ -543,22 +543,23 @@ autumn_comp <- pmcmc_parameter("autumn_comp", initial = 0.000001, max = 0.1, min
 winter_comp <- pmcmc_parameter("winter_comp", initial = 0.000001, max = 0.1, min = 0, prior = function(p)
   dunif(p, max = 0.1, min = 0))
 mu <- pmcmc_parameter("mu", initial = 0.02, max = 0.1, min = 0, prior = function(p)
-  #dunif(p, max = 0.2, min = 0))
-   dtruncgamma(p, shape = 2.5, rate = 1/30.0, lower = 1/10, upper = 1/180)) # Try a truncated Gamma distribution like Fabienne
+  dunif(p, max = 0.2, min = 0))
+  # dtruncgamma(p, shape = 2.5, rate = 1/30.0, lower = 1/10, upper = 1/180)) # Try a truncated Gamma distribution like Fabienne
 pi <- pmcmc_parameter("pi", initial = 0.9, max = 1, min = 0, prior = function(p)
-  dunif(p, max = 1, min = 0))
+   dunif(p, max = 1, min = 0))
+  # gtools::ddirichlet(p, alpha = 1))
 
-proposal_matrix <- diag(0.1, 6)
+proposal_matrix <- diag(0.1, 5)
 mcmc_pars <- pmcmc_parameters$new(list(spring_comp = spring_comp, 
                                        summer_comp = summer_comp,
                                        autumn_comp = autumn_comp,
                                        winter_comp = winter_comp,
-                                      mu = mu,
+                                     # mu = mu,
                                        pi = pi),
                                   proposal_matrix)
 # Chain parameters
-n_steps <- 1e4
-n_burnin <- 500
+n_steps <- 3e4
+n_burnin <- 10000
 control <- pmcmc_control(
   n_steps, 
   save_state = T,
@@ -604,7 +605,7 @@ mcmc_pars <- mcstate::pmcmc_parameters$new(
        summer_comp = summer_comp,
        autumn_comp = autumn_comp,
        winter_comp = winter_comp,
-       mu = mu,
+     #  mu = mu,
        pi = pi),
   proposal_matrix)
 proposal_matrix
