--- a/Extended model/testing the odin model.Rmd
+++ b/Extended model/testing the odin model.Rmd
@@ -215,7 +215,7 @@ data$xMidpoint <- sapply(data$age_grp, get_midpoint)
 # Get number of cases by age
 incidence_data <- data %>% select (age_grp, age_days, infection, xMidpoint) %>%
   mutate(N_tot = n()) %>%
-  group_by(age_grp, xMidpoint) %>%
+  group_by(age_grp) %>% #, xMidpoint) %>%
   summarise(age_mid = round(median(age_days)), 
             N = n(),
             n_infection = sum(infection),
@@ -228,9 +228,10 @@ incidence_data <- data %>% select (age_grp, age_days, infection, xMidpoint) %>%
                                TRUE ~ 0))
 
 # Get number of cases by age and season of birth
-incidence_data_season <- data %>% select (age_grp, age_days, infection, season_birth, xMidpoint) %>%
+incidence_data_season <- data %>% select (age_grp, age_days, infection, season_birth) %>%#, xMidpoint) %>%
   mutate(N_tot = n()) %>%
-  group_by(age_grp, xMidpoint, season_birth) %>%
+  group_by(age_grp, #xMidpoint, 
+           season_birth) %>%
   summarise(age_mid = round(median(age_days)), 
             N = n(),
             n_infection = sum(infection),
@@ -242,7 +243,7 @@ incidence_data_season <- data %>% select (age_grp, age_days, infection, season_b
   mutate(incidence = case_when(incidence >= 0 ~ round(incidence),
                                TRUE ~ 0))
 
-incidence_data_season_wide <- incidence_data_season %>% select (!c(age_mid, age_grp)) %>%
+incidence_data_season_wide <- incidence_data_season %>% #select (!c(age_mid, age_grp)) %>%
   pivot_wider(
     names_from = season_birth,
     values_from = c(N , n_infection, prop_seroconv, cum_infection, incidence),
@@ -258,16 +259,18 @@ rmarkdown::paged_table(model_data)
 
 model_data_season <- particle_filter_data(data = incidence_data_season_wide,
                                    initial_time = 0,
-                                   time = "xMidpoint",
+                                   #time = "xMidpoint",
+                                   time = "age_mid",
                                    rate = 1)
 rmarkdown::paged_table(model_data_season)
 ```
 
 ```{r}
 # Plot data by birth cohort
-incidence_data_season %>% filter (xMidpoint <= 2*365) %>%
+incidence_data_season %>% filter (age_mid <= 2*365) %>%#(xMidpoint <= 2*365) %>%
   ggplot() +
-  geom_point(aes(x = xMidpoint, y = prop_seroconv)) +
+  geom_point(aes(x = age_mid, #xMidpoint, 
+                   y = prop_seroconv)) +
   facet_wrap(~season_birth) +
   labs(title = "Proportion seroconverted by age", x = "\nAge (days)",
        y = "Seroconversion (%)\n") +
@@ -417,7 +420,7 @@ case_compare_test <- function(state, observed, pars = NULL){
    # Data by season of birth
   nconv_spring <- observed$n_infection_spring
   N_spring <- observed$N_spring
-  prob_spring <- state[5, , ] / colSums(state[2:5, , ]) 
+  prob_spring <- state[5, , ]
   ll_spring <- dbinom(x = nconv_spring,
                       size = N_spring,
                       prob = prob_spring,
@@ -425,7 +428,7 @@ case_compare_test <- function(state, observed, pars = NULL){
   
   nconv_summer <- observed$n_infection_summer
   N_summer <- observed$N_summer
-  prob_summer <- state[9, , ] / colSums(state[6:9, , ])
+  prob_summer <- state[9, , ]
   ll_summer <- dbinom(x = nconv_summer,
                       size = N_summer,
                       prob = prob_summer,
@@ -433,7 +436,7 @@ case_compare_test <- function(state, observed, pars = NULL){
   
   nconv_autumn <- observed$n_infection_autumn
   N_autumn <- observed$N_autumn
-  prob_autumn <- state[13, , ] / colSums(state[10:13, , ])
+  prob_autumn <- state[13, , ]
   ll_autumn <- dbinom(x = nconv_autumn,
                       size = N_autumn,
                       prob = prob_autumn,
@@ -441,13 +444,14 @@ case_compare_test <- function(state, observed, pars = NULL){
   
   nconv_winter <- observed$n_infection_winter
   N_winter <- observed$N_winter
-  prob_winter <- state[17, , ] / colSums(state[14:17, , ]) 
+  prob_winter <- state[17, , ] 
   ll_winter <- dbinom(x = nconv_winter,
                       size = N_winter,
                       prob = prob_winter,
                       log = TRUE)
   
   ll_spring + ll_summer + ll_autumn + ll_winter
+  
   
 }
 
