--- a/Extended model/Testing odin with Bayesian tools.Rmd
+++ b/Extended model/Testing odin with Bayesian tools.Rmd
@@ -93,7 +93,8 @@ model_fun <- function (estimates) {
               spring_comp = estimates[1], 
               summer_comp = estimates[2], 
               autumn_comp = estimates[3], 
-              winter_comp = estimates[4])
+              winter_comp = estimates[4],
+              pi = estimates[5])
 msr_model <- gen_msr$new(pars = p_new,
                          time = 1,
                          n_particles = 1L,
@@ -201,6 +202,34 @@ model_output %>% ggplot() +
 ```
 
 ```{r}
+# Plot the model output for pi = 0.9
+theta <- c(spring_comp = 0.00001, summer_comp = 0.02002, autumn_comp = 0.00003, winter_comp = 0.00004,
+           pi = 0.9)
+model_output <- model_fun(theta)
+
+model_output %>% ggplot() +
+  geom_line(aes(x = time, y = R_all), colour = "indianred1") +
+  geom_point(data = data_no_season, aes(x = agemid, y = seroprev_mean)) +
+  geom_errorbar(data = data_no_season, aes(x = agemid, ymin = seroprev_low95, 
+                    ymax = seroprev_up95)) +
+  ylab("Proportion seroconverted") + xlab("age (days)") 
+```
+
+```{r}
+# Plot the model output for pi = 0.15
+theta <- c(spring_comp = 0.00001, summer_comp = 0.02002, autumn_comp = 0.00003, winter_comp = 0.00004,
+           pi = 0.15)
+model_output <- model_fun(theta)
+
+model_output %>% ggplot() +
+  geom_line(aes(x = time, y = R_all), colour = "indianred1") +
+  geom_point(data = data_no_season, aes(x = agemid, y = seroprev_mean)) +
+  geom_errorbar(data = data_no_season, aes(x = agemid, ymin = seroprev_low95, 
+                    ymax = seroprev_up95)) +
+  ylab("Proportion seroconverted") + xlab("age (days)") 
+```
+
+```{r}
 # Testing gradient descent
 LL_freq = function(x) -loglik(x) # optim searches for parameters, which minimise the function fn --> change the sign of the function
 
@@ -287,7 +316,7 @@ bayesianSetup <- createBayesianSetup(likelihood = loglik,
                                     upper = upper,
                                     names = names(theta[index]))
 nchains <- 2
-mcmc_settings <- list(iterations = 2*80000, 
+mcmc_settings <- list(iterations = 10000, 
                       nrChains = nchains,adapt = T, # running an adaptive MCMC
                       optimize = T)
 system.time({trace <- runMCMC(bayesianSetup = bayesianSetup, 
